// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-oTTbF isEDHu"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-oTTbF isEDHu"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-oTTbF isEDHu"
>
  <span
    className="sc-fOpBKL jUAjKZ"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-oTTbF isEDHu"
>
  <div
    className="sc-iKKmqK fqNjVI"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-oTTbF dQHrjv"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-oTTbF czZwJb"
  size="small"
/>
`;
